--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,33 +1,3 @@
-name: Python CI/CD on AWS EC2
-
-on:
-  push:
-    branches:
-      - main
-      - staging
-  release:
-    types: [created]
-
-jobs:
-  build-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: pytest
-
   deploy-to-ec2:
     runs-on: ubuntu-latest
     needs: build-test
@@ -42,7 +12,8 @@ jobs:
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem $USER@$HOST << 'EOF'
-            cd python-ci-cd
+            cd /home/ubuntu/Python-ci-cd/Python-ci-cd || exit 1
             git pull origin main
-            python3 app.py
+            source venv/bin/activate
+            python3 SampleApp.py
           EOF
